fix: hardcode CORS origins in SecurityConfig like AnaRobles